--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,1 +1,24 @@
 <p>error-page works!</p>
+
+
+<ul>
+
+    <li>
+        <a routerLink="/auth/login">
+            Ir a login
+        </a>
+    </li>
+
+    <li>
+        <a routerLink="/auth/registro">
+            Ir la registro
+        </a>
+    </li>
+
+    <li>
+        <a routerLink="/mutantes/listado">
+            Ir al listado
+        </a>
+    </li>
+
+</ul>
