--- a/src/app/mutantes/components/mutante-tarjeta/mutante-tarjeta.component.html
+++ b/src/app/mutantes/components/mutante-tarjeta/mutante-tarjeta.component.html
@@ -20,13 +20,10 @@
     </mat-card-content>
 
     <mat-card-actions>
+   
         <button mat-button 
-                color="warn">
-            Leer más...
-        </button>
-    
-        <button mat-button 
-                color="info">
+                color="warn"
+                [routerLink]="['/mutantes/editar', mutante._id]">
             Editar
         </button>
     </mat-card-actions>
