--- a/src/app/mutantes/pages/agregar/agregar.component.html
+++ b/src/app/mutantes/pages/agregar/agregar.component.html
@@ -1,1 +1,114 @@
-<p>agregar works!</p>
+
+<h1>Nuevo Mutante</h1> 
+
+<div fxLayout="row" 
+     fxLayoutGap="40px"
+     fxLayout.xs="column">
+
+    <div fxFlex="50" fxLayout="column">
+
+        <div fxLayout="row" 
+             fxLayoutGap="30px"
+             fxLayout.xs="column">
+            
+            <mat-form-field fxFlex="100">
+                <mat-label>Nombre del Mutante</mat-label>
+                <input matInput
+                       type="text"
+                       required
+                       [(ngModel)]="mutantes.nombre">
+            </mat-form-field>
+
+            <mat-form-field fxFlex="100">
+                <mat-label>Heroe o Villano</mat-label>
+    
+                <mat-select required 
+                            >
+    
+                    <mat-option *ngFor=" let grupo of grupos " >
+                        {{ grupo.tipo}}
+                    </mat-option>
+    
+                </mat-select>
+    
+            </mat-form-field>
+
+            <mat-form-field fxFlex="100">
+                <mat-label>Condicion</mat-label>
+    
+                <mat-select required 
+                            >
+    
+                    <mat-option *ngFor=" let condi of condicion " >
+                        {{ condi.tipo}}
+                    </mat-option>
+    
+                </mat-select>
+    
+            </mat-form-field>
+
+            <mat-form-field fxFlex="100">
+                <mat-label> Tipo de vehiculo </mat-label>
+    
+                <mat-select required 
+                            >
+    
+                    <mat-option *ngFor=" let vehiculo of vehiculos " >
+                        {{ vehiculo.tipo}}
+                    </mat-option>
+    
+                </mat-select>
+    
+            </mat-form-field>
+
+    
+
+        </div>
+
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Super Poder</mat-label>
+            <input matInput
+                   type="text"
+                   required
+                   >
+        </mat-form-field>
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Lugar de operacion</mat-label>
+            <input matInput
+                   type="text"
+                   required
+                   >
+        </mat-form-field>
+
+        <hr/>
+        
+        <div fxLayout="row">
+            
+            <button  
+                    mat-raised-button
+                    color="primary">
+    
+                <mat-icon>edit</mat-icon>
+             Guardar Mutante
+            </button>
+            
+            <span class="spacer"></span>
+
+            <button  
+                    mat-raised-button
+                    color="warn">
+    
+                <mat-icon>remove</mat-icon>
+             Eliminar Mutante
+            </button>
+          
+
+        </div>
+
+
+    </div>
+
+</div>
+
