--- a/src/app/mutantes/pages/agregar/agregar.component.html
+++ b/src/app/mutantes/pages/agregar/agregar.component.html
@@ -101,9 +101,10 @@
             
             <span class="spacer"></span>
 
-            <button  
+            <button *ngIf="mutante._id" 
                     mat-raised-button
-                    color="warn">
+                    color="warn"
+                     (click) = borrarMutante()>
     
                 <mat-icon>remove</mat-icon>
              Eliminar Mutante
